removed redundant vim configurations. Changed zsh and tmux conf's

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,7 @@ set -g visual-activity on
 set -g visual-content on
 
 setw -g mode-keys vi
+set-window-option -g mode-keys vi
 setw -g mode-mouse on
 setw -g utf8 on
 
