--- a/tmux.conf
+++ b/tmux.conf
@@ -4,27 +4,32 @@ unbind l
 set -g prefix C-a
 bind-key C-a last-window
 
-# Reload key
-bind r source-file ~/.tmux.conf
-
-set -g default-terminal "screen-256color"
-set -g history-limit 10000000
+#set -g default-terminal "screen-256color"
+set -g history-limit 10000
 
 set -g status on
 set -g status-keys vi
 
-set -g bell-action any
-set -g visual-bell off
+#set -g bell-action any
+#set -g visual-bell off
  
-set -g visual-activity on
-set -g visual-content on
+#set -g visual-activity on
+#set -g visual-content on
 
+# set vi mode for keys
 setw -g mode-keys vi
-set-window-option -g mode-keys vi
+
 setw -g mode-mouse on
 setw -g utf8 on
 
+### keybindings ###
+# switch panes with vim nav keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+# create new panes
 bind-key '|' split-window -h
 bind-key _ split-window
-
-# THEME
+# reload key
+bind r source-file ~/.tmux.conf
