--- a/tmux.conf
+++ b/tmux.conf
@@ -9,14 +9,6 @@ set -g history-limit 10000
 
 set -g status on
 set -g status-keys vi
-
-#set -g bell-action any
-#set -g visual-bell off
- 
-#set -g visual-activity on
-#set -g visual-content on
-
-# set vi mode for keys
 setw -g mode-keys vi
 
 setw -g mode-mouse on
@@ -33,3 +25,25 @@ bind-key '|' split-window -h
 bind-key _ split-window
 # reload key
 bind r source-file ~/.tmux.conf
+
+# theming
+set-option -g status-justify left
+set-option -g status-bg black
+set-option -g status-fg white
+set-option -g status-left-length 40
+
+set-option -g pane-active-border-fg green
+set-option -g pane-active-border-bg black
+set-option -g pane-border-fg white
+set-option -g pane-border-bg black
+
+set-option -g message-fg black
+set-option -g message-bg green
+
+setw -g window-status-bg black
+setw -g window-status-current-fg green
+setw -g window-status-alert-attr default
+setw -g window-status-alert-fg yellow
+
+set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
+set -g status-right '#[fg=green]][ #[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]'
