--- a/tmux.conf
+++ b/tmux.conf
@@ -27,24 +27,24 @@ bind-key _ split-window
 bind r source-file ~/.tmux.conf
 
 # theming
-set-option -g status-justify left
-set-option -g status-bg green
-set-option -g status-fg black
-set-option -g status-left-length 40
-
-set-option -g pane-active-border-fg green
-set-option -g pane-active-border-bg black
-set-option -g pane-border-fg green
-set-option -g pane-border-bg black
-
-set-option -g message-fg black
-set-option -g message-bg green
-
-setw -g window-status-bg green
-setw -g window-status-current-bg black
-setw -g window-status-current-fg green
-setw -g window-status-alert-attr default
-setw -g window-status-alert-fg yellow
-
-set -g status-left '#H# :#S# #[default]'
-set -g status-right '#[fg=white]%Y-%m-%d #[fg=white]%H:%M#[default]'
+# set-option -g status-justify left
+# set-option -g status-bg green
+# set-option -g status-fg black
+# set-option -g status-left-length 40
+# 
+# set-option -g pane-active-border-fg green
+# set-option -g pane-active-border-bg black
+# set-option -g pane-border-fg green
+# set-option -g pane-border-bg black
+# 
+# set-option -g message-fg black
+# set-option -g message-bg green
+# 
+# setw -g window-status-bg green
+# setw -g window-status-current-bg black
+# setw -g window-status-current-fg green
+# setw -g window-status-alert-attr default
+# setw -g window-status-alert-fg yellow
+# 
+# set -g status-left '#H# :#S# #[default]'
+# set -g status-right '#[fg=white]%Y-%m-%d #[fg=white]%H:%M#[default]'
