--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/vundle.git"]
 	path = vim/vundle.git
 	url = http://github.com/gmarik/vundle.git
+[submodule "vim/snippets"]
+	path = vim/snippets
+	url = https://github.com/jredville/snipmate-snippets.git
