osx defaults and msc aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,38 @@
+## General settings
+set -g default-terminal "screen-256color"
+set -g mode-mouse on
+
+## Key bindings
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-set -g default-terminal "screen-256color"
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
 
+# pane splits
+bind v split-window -h
+bind s split-window -v
+
+# use the vim motion keys to move between panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# resize panes
+bind < resize-pane -L 1
+bind > resize-pane -R 1
+
+## Window options
 set-window-option -g utf8 on
 set-window-option -g automatic-rename off
 
+## Theming
 set -g status-right '#(uptime | cut -d , -f 4-)'
 
-set -g mode-mouse on
+## Conviniences
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
