--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 ## General settings
-set -g default-terminal "screen-256color"
-set -g mode-mouse on
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+set -g mouse-utf8 on
 
 ## Key bindings
 set -g prefix C-a
@@ -22,15 +22,18 @@ bind k select-pane -U
 bind l select-pane -R
 
 # resize panes
-bind < resize-pane -L 1
-bind > resize-pane -R 1
+bind < resize-pane -L 10
+bind > resize-pane -R 10
+
+# Sane scrolling
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 ## Window options
 set-window-option -g utf8 on
 set-window-option -g automatic-rename off
 
 ## Theming
-set -g status-right '#(uptime | cut -d , -f 4-)'
+# set -g status-right '#(uptime | cut -d , -f 4-)'
 
 ## Conviniences
 # force a reload of the config file
