--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 ## General settings
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"
 set -g mouse-utf8 on
 
 ## Key bindings
