--- a/tmux.conf
+++ b/tmux.conf
@@ -3,13 +3,13 @@
 set -g mouse-utf8 on
 
 ## Key bindings
-set -g prefix C-a
+set -g prefix C-q
 unbind C-b
-bind C-a send-prefix
+bind C-q send-prefix
 
 # quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+unbind ^Q
+bind ^Q select-pane -t :.+
 
 # pane splits
 bind v split-window -h
@@ -33,7 +33,7 @@ set-window-option -g utf8 on
 set-window-option -g automatic-rename off
 
 ## Theming
-# set -g status-right '#(uptime | cut -d , -f 4-)'
+set -g status-right '#(uptime | cut -d , -f 4-)'
 
 ## Conviniences
 # force a reload of the config file
