--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 ## General settings
 # set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"
-set -g mouse-utf8 on
+# set -g mouse-utf8 on
 
 ## Key bindings
 set -g prefix C-q
