--- a/tmux.conf
+++ b/tmux.conf
@@ -36,13 +36,13 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # Pane resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
 
 # mouse support - set to on if you want to use the mouse
-setw -g mode-mouse off
+setw -g mode-mouse on
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
 set -g mouse-select-window off
