--- a/tmux.conf
+++ b/tmux.conf
@@ -43,9 +43,9 @@ bind -r L resize-pane -R 10
 
 # mouse support - set to on if you want to use the mouse
 setw -g mode-mouse on
-set -g mouse-select-pane off
+set -g mouse-select-pane on
 set -g mouse-resize-pane off
-set -g mouse-select-window off
+set -g mouse-select-window on
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
