--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
-# Our .tmux.conf file
+# disable rbenv variable in new panes
+set-environment -gu RBENV_VERSION
 
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
@@ -47,6 +48,9 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane off
 set -g mouse-select-window on
 
+# renumber windows when a window is closed
+set-option -g renumber-windows on
+
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
 
@@ -56,7 +60,7 @@ set -g visual-activity on
 
 # Status line left side
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "Session: #S"
 
 #START:utf8
 set -g status-utf8 on
@@ -81,6 +85,7 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # theme
 source ~/Code/dotfiles/tmux/tmux-solarized-256.conf
