--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g prefix C-a
 unbind C-b
 
 #setting the delay between prefix and command
-set -s escape-time 1
+set-option -sg escape-time 0
 
 # Ensure that we can send Ctrl-A to other apps
 bind C-a send-prefix
@@ -35,6 +35,8 @@ bind l select-pane -R
 # Quick pane selection
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+
+setw -g aggressive-resize on
 
 # Pane resizing
 bind -r H resize-pane -L 10
