--- a/tmuxinator/ht.yml
+++ b/tmuxinator/ht.yml
@@ -7,7 +7,7 @@ root: ~/Code/HouseTrip/web-app
 # socket_name: foo
 
 # Runs before everything. Use it to start daemons etc.
-# pre: sudo /etc/rc.d/mysqld start
+pre: cd ~/Code/HouseTrip/web-app
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 pre_window: rbenv shell 1.9.3-p545
