--- a/tmuxinator/blog.yml
+++ b/tmuxinator/blog.yml
@@ -1,14 +1,16 @@
-name: ht
-root: ~/Code/HouseTrip/web-app
+# ~/.tmuxinator/blog.yml
+
+name: blog
+root: ~/Code/thejspr.com
 
 # Optional tmux socket
 # socket_name: foo
 
 # Runs before everything. Use it to start daemons etc.
-pre: cd ~/Code/HouseTrip/web-app
+pre: cd ~/Code/thejspr.com
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-pre_window: rbenv shell 2.1.2
+# pre_window: rbenv shell 2.0.0-p247
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
@@ -18,10 +20,4 @@ pre_window: rbenv shell 2.1.2
 
 windows:
   - editor: g
-  - server: bundle exec unicorn_rails -c ./config/unicorn/development.rb
-  - console: bundle exec script/console --irb=pry
-  - logs:
-      layout: even-horizontal
-      panes:
-        - sass: ./script/sass
-        - logs: tail -f log/development.log
+  - server: jekyll serve -w
