Msc tmux and vim changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -91,3 +91,6 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # theme
 source ~/Code/dotfiles/tmux/tmux-solarized-256.conf
+
+bind = switch -t notes
+bind 0 switch -t ht
