Add tmux plugin mananger and tmux-resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -94,3 +94,19 @@ source ~/Code/dotfiles/tmux/tmux-solarized-256.conf
 
 bind = switch -t notes
 bind 0 switch -t ht
+
+
+# List of plugins
+# Supports `github_username/repo` or full git URLs
+set -g @tpm_plugins "           \
+  tmux-plugins/tpm              \
+  tmux-plugins/tmux-resurrect   \
+"
+
+# initializes TMUX plugin manager
+run-shell ~/.tmux/plugins/tpm/tpm
+
+
+# tmux-resurrect
+# prefix + Ctrl-s or prefix + Alt-s - save
+# prefix + Ctrl-r or prefix + Alt-r - restore
