Alias cleanup and rails 2.0 removals

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,9 @@ bind -r C-l select-window -t :+
 
 setw -g aggressive-resize on
 
+# new panes have the same directory
+bind c new-window -c "#{pane_current_path}"
+
 # Pane resizing
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
