Remove old tmuxinator scripts

--- a/tmuxinator/studiz.yml
+++ b/tmuxinator/studiz.yml
@@ -10,7 +10,7 @@ root: ~/Code/studiz/website
 # pre: sudo /etc/rc.d/mysqld start
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-pre_window: rbenv shell 2.1.1
+pre_window: rbenv shell 2.1.5
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
@@ -19,10 +19,6 @@ pre_window: rbenv shell 2.1.1
 # tmux_command: byobu
 
 windows:
-  - editor:
-      layout: 9701,272x72,0,0[272x55,0,0,56,272x16,0,56,60]
-      panes:
-        - g
-        - bundle exec guard
+  - editor: g
   - server: bundle exec rails s -p 4000
   - console: bundle exec rails c
