--- a/tmuxinator/skyscanner.yml
+++ b/tmuxinator/skyscanner.yml
@@ -1,22 +1,16 @@
 name: skyscanner
 root: ~/code/skyscanner/tmc
 
-# Optional tmux socket
-# socket_name: foo
-
-# Runs before everything. Use it to start daemons etc.
 pre: cd ~/code/skyscanner/tmc
 
-# Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 pre_window: rbenv shell 2.2.0
 
-# Pass command line options to tmux. Useful for specifying a different tmux.conf.
-# tmux_options: -f ~/.tmux.mac.conf
-
-# Change the command to call tmux.  This can be used by derivatives/wrappers like byobu.
-# tmux_command: byobu
-
 windows:
-  - editor: g
-  - grunt: cd client && npm install && bower install && grunt dev
-  - server: bundle install && bundle exec rake db:migrate db:test:prepare && rails server
+  - editor: ssh-add ~/.ssh/skyscanner/id_rsa && mailcatcher && g
+  - grunt: z client && npm install && bower update && grunt dev
+  - server: bundle install && bundle exec rake db:migrate && DISABLE_UAS=true rails server
+  - backend:
+      layout: even-vertical
+      panes:
+        - bundle exec rails console
+        - bundle exec sidekiq
