git ci, no bundle, msc

--- a/tmux.conf
+++ b/tmux.conf
@@ -95,16 +95,14 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 # theme
 source ~/Code/dotfiles/tmux/tmux-solarized-256.conf
 
-bind = switch -t notes
-bind 0 switch -t ht
-
-
 # List of plugins
 # Supports `github_username/repo` or full git URLs
 set -g @tpm_plugins "           \
   tmux-plugins/tpm              \
   tmux-plugins/tmux-resurrect   \
 "
+
+set -g @resurrect-strategy-vim 'session'
 
 # initializes TMUX plugin manager
 run-shell ~/.tmux/plugins/tpm/tpm
