--- a/tmux.conf
+++ b/tmux.conf
@@ -100,9 +100,11 @@ source ~/Code/dotfiles/tmux/tmux-solarized-256.conf
 set -g @tpm_plugins "           \
   tmux-plugins/tpm              \
   tmux-plugins/tmux-resurrect   \
+  tmux-plugins/tmux-continuum   \
 "
 
 set -g @resurrect-strategy-vim 'session'
+set -g @continuum-restore 'on'
 
 # initializes TMUX plugin manager
 run-shell ~/.tmux/plugins/tpm/tpm
