fix old tmux mouse settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,10 +48,8 @@ bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
 # mouse support - set to on if you want to use the mouse
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane off
-set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
 
 # renumber windows when a window is closed
 set-option -g renumber-windows on
