--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
 
