start tmux resurrect properly

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+if-shell '[[ $(tmux list-sessions | wc -l ) -eq 0 ]]' 'run-shell $HOME/.tmux/plugins/tmux-resurrect/scripts/restore.sh'
+
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
 
