--- a/tmux.conf
+++ b/tmux.conf
@@ -1,18 +1,11 @@
-if-shell '[[ $(tmux list-sessions | wc -l ) -eq 0 ]]' 'run-shell $HOME/.tmux/plugins/tmux-resurrect/scripts/restore.sh'
-
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
-
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
 
 # Free the original Ctrl-b prefix keybinding
 unbind C-b
-
-#setting the delay between prefix and command
-set-option -sg escape-time 0
 
 # Ensure that we can send Ctrl-A to other apps
 bind C-a send-prefix
@@ -40,8 +33,6 @@ bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-setw -g aggressive-resize on
-
 # new panes have the same directory
 bind c new-window -c "#{pane_current_path}"
 
@@ -57,23 +48,13 @@ set -g mouse on
 # renumber windows when a window is closed
 set-option -g renumber-windows on
 
-# Set the default terminal mode to 256color mode
-set -g default-terminal "screen-256color"
-
 # enable activity alerts
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Status line left side
-set -g status-left-length 40
-set -g status-left "Session: #S"
-
 # Status line right side
 # 15% | 28 Nov 18:15
 set -g status-right "#[fg=cyan]%d %b %R"
-
-# Update the status bar every sixty seconds
-set -g status-interval 60
 
 # Center the window list
 set -g status-justify centre
@@ -81,24 +62,14 @@ set -g status-justify centre
 # enable vi keys.
 setw -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# theme
-source ~/Code/dotfiles/tmux/tmux-solarized-256.conf
-
 # List of plugins
 # Supports `github_username/repo` or full git URLs
 set -g @tpm_plugins "           \
   tmux-plugins/tpm              \
   tmux-plugins/tmux-resurrect   \
   tmux-plugins/tmux-continuum   \
+  tmux-plugins/tmux-sensible    \
+  seebi/tmux-colors-solarized   \
 "
 
 set -g @resurrect-strategy-vim 'session'
@@ -106,10 +77,6 @@ set -g @continuum-restore 'on'
 
 # initializes TMUX plugin manager
 run-shell ~/.tmux/plugins/tpm/tpm
-
-# tmux-resurrect
-# prefix + Ctrl-s or prefix + Alt-s - save
-# prefix + Ctrl-r or prefix + Alt-r - restore
 
 # Smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
