--- a/tmux.conf
+++ b/tmux.conf
@@ -60,6 +60,7 @@ set -g @tpm_plugins "           \
   tmux-plugins/tmux-resurrect   \
   tmux-plugins/tmux-continuum   \
   tmux-plugins/tmux-sensible    \
+  odedlaz/tmux-onedark-theme    \
 "
 
 set -g @resurrect-strategy-vim 'session'
