--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
+
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
 
