--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-# set -g default-terminal "xterm-256color"
 set-option -g default-terminal "screen-256color"
 
 # disable rbenv variable in new panes
@@ -7,55 +6,44 @@ set-environment -gu RBENV_VERSION
 
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
-
-# Free the original Ctrl-b prefix keybinding
 unbind C-b
 
 # Ensure that we can send Ctrl-A to other apps
 bind C-a send-prefix
 
-# Set the base index for windows to 1 instead of 0
+# Set the base index for windows and panes to 1 instead of 0
 set -g base-index 1
-
-# Set the base index for panes to 1 instead of 0
 setw -g pane-base-index 1
 
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# splitting panes
+# Splitting panes
 bind | split-window -h
 bind - split-window -v
 
-# moving between panes
+# Moving between panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# new panes have the same directory
+# New panes have the same directory
 bind c new-window -c "#{pane_current_path}"
 
 # Pane resizing
-bind -r H resize-pane -L 10
-bind -r J resize-pane -D 10
-bind -r K resize-pane -U 10
-bind -r L resize-pane -R 10
+bind -r H resize-pane -L 15
+bind -r J resize-pane -D 15
+bind -r K resize-pane -U 15
+bind -r L resize-pane -R 15
 
-# mouse support - set to on if you want to use the mouse
+# Mouse support - set to on if you want to use the mouse
 set -g mouse on
 
-# renumber windows when a window is closed
+# Renumber windows when a window is closed
 set-option -g renumber-windows on
 
-# enable activity alerts
-setw -g monitor-activity on
-set -g visual-activity on
-
-# Center the window list
-set -g status-justify centre
-
-# enable vi keys.
+# Enable vi keys.
 setw -g mode-keys vi
 
 # List of plugins
@@ -64,12 +52,11 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-resurrect    \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-sensible     \
-  odedlaz/tmux-onedark-theme     \
   christoomey/vim-tmux-navigator \
 "
 
 set -g @resurrect-strategy-vim 'session'
 set -g @continuum-restore 'on'
 
-# initializes TMUX plugin manager
+# Initializes TMUX plugin manager
 run-shell ~/.tmux/plugins/tpm/tpm
