--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g default-terminal "screen-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -g default-terminal "screen-256color"
 
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
