fix tmux new pane directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,8 +20,8 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Splitting panes
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # New panes have the same directory
 bind c new-window -c "#{pane_current_path}"
