linux comp part 2

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
+# set -g set-clipboard external
+# set -T root MouseUp2Pane paste
+
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
 
