linux friendly part 3

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+# set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "screen-256color"
 
 # set -g set-clipboard external
 # set -T root MouseUp2Pane paste
