--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,6 @@
 # set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -g default-terminal "screen-256color"
 
-# set -g set-clipboard external
-# set -T root MouseUp2Pane paste
-
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
 
@@ -49,6 +46,7 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-resurrect    \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-sensible     \
+  tmux-plugins/tmux-yank         \
   christoomey/vim-tmux-navigator \
 "
 
