--- a/tmux.conf
+++ b/tmux.conf
@@ -34,6 +34,11 @@ bind -r L resize-pane -R 15
 # Mouse support - set to on if you want to use the mouse
 set -g mouse on
 
+# Clipboard on linux
+if-shell "uname -a | grep Linux" \
+  'set-option -s set-clipboard off' \
+  'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"'
+
 # Renumber windows when a window is closed
 set-option -g renumber-windows on
 
