--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,8 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Splitting panes
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
 
 # New panes have the same directory
 bind c new-window -c "#{pane_current_path}"
