--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ setw -g pane-base-index 1
 
 # Splitting panes
 bind h split-window -h -c "#{pane_current_path}"
-bind v split-window -v -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # New panes have the same directory
 bind c new-window -c "#{pane_current_path}"
