--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
-# set-option -sa terminal-overrides ',xterm-256color:RGB'
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 
 # disable rbenv variable in new panes
