--- a/i3/config
+++ b/i3/config
@@ -37,12 +37,14 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
+# start program launcher
 # bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+shift+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id rofi -show run
+# bindsym $mod+o exec --no-startup-id rofi -show
+# bindsym $mod+Shift+d exec rofimoji
+# bindsym $mod+Ctrl+d exec rofi -show calc -modi calc -no-show-match -no-sort
+
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
@@ -185,12 +187,15 @@ bar {
 bindsym --release $mod+x exec --no-startup-id import /home/jesper/Downloads/latest-screenshot.png
 
 # Application specific assignments
-assign [class="Spotify"] 3
+assign [class="Google-chrome"] 1
+assign [class="Alacritty"] 1
 assign [class="Slack"] 2
 assign [class="Todoist"] 2
+assign [class="Spotify"] 3
 
+# Statup applications
 exec alacritty
 exec google-chrome
-exec Slack
-exec Todoist
-exec Spotify
+exec slack
+exec todoist
+exec spotify
