--- a/i3status.conf
+++ b/i3status.conf
@@ -7,7 +7,7 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-  colors = true
+  colors = false
   interval = 5
 }
 
@@ -27,8 +27,8 @@ volume master {
 }
 
 wireless _first_ {
-  format_up = "W: (%quality at %essid)"
-  format_down = "W: down"
+  format_up = "%quality at %essid"
+  format_down = "Wifi down"
 }
 
 ethernet _first_ {
