--- a/i3status.conf
+++ b/i3status.conf
@@ -22,8 +22,8 @@ order += "tztime local"
 order += "volume master"
 
 volume master {
-  format = "♪: %volume"
-  format_muted = "♪: muted (%volume)"
+  format = "♪ %volume"
+  format_muted = "🔇"
 }
 
 wireless _first_ {
