--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Add truecolor support
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",screen-256color:RGB"
 # Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 
