set lang in tmux status

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+set -g status-right "#(current-layout) "⁞" #(date +'%d-%m-%y %H:%M')"
+
 # Add truecolor support
 set-option -ga terminal-overrides ",screen-256color:RGB"
 # Default terminal is 256 colors
@@ -52,6 +54,8 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
 "
+
+bind r source-file ~/.tmux.conf #\; display-message "Config reloaded..."
 
 set -g @continuum-restore 'on'
 
