--- a/i3/config
+++ b/i3/config
@@ -199,18 +199,22 @@ mode "$mode_system" {
 }
 bindsym $mod+Home mode "$mode_system"
 
-set $keyboard_layout "Keyboard Layout: (e) English, (d) Danish"
-mode $keyboard_layout {
-  bindsym d exec --no-startup-id setxkbmap dk, mode "default"
-  bindsym e exec --no-startup-id setxkbmap gb, mode "default"
+# set $keyboard_layout "Keyboard Layout: (e) English, (d) Danish"
+# mode $keyboard_layout {
+#   bindsym d exec --no-startup-id setxkbmap dk, mode "default"
+#   bindsym e exec --no-startup-id setxkbmap gb, mode "default"
 
-  # back to normal: Enter or Escape
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-}
-bindsym $mod+Home mode $keyboard_layout
+#   # back to normal: Enter or Escape
+#   bindsym Return mode "default"
+#   bindsym Escape mode "default"
+# }
+# bindsym $mod+Home mode $keyboard_layout
 
-bindsym $mod+F12 exec --no-startup-id toggle-lang
+bindsym $mod+F12 exec --no-startup-id switch-layout
+
+# Fix handing of popups
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
 
 # Application specific assignments
 for_window [class="Spotify"] move to workspace $ws3
