--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -1,6 +1,11 @@
+[now-playing]
+label=Now playing:
+command={ playerctl metadata artist; playerctl metadata title; } | tr "\n" " " | xargs
+interval=10
+
 [time]
 command=date +'%d/%m %H:%M'
-interval=5
+interval=30
 
 [layout]
 #label=layout
