--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set -g status-right "#(current-layout) "⁞" #(date +'%d-%m-%y %H:%M')"
+set -g status-right "#(current-layout) "⁞" #(date +'%d-%m-%Y %H:%M')"
 
 # Add truecolor support
 set-option -ga terminal-overrides ",screen-256color:RGB"
