--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -1,6 +1,6 @@
 [now-playing]
 label=Now playing:
-command={ playerctl metadata artist; playerctl metadata title; } | tr "\n" " " | xargs
+command=now-playing
 interval=10
 
 [time]
@@ -10,4 +10,11 @@ interval=30
 [layout]
 #label=layout
 command=current-layout
-interval=5
+interval=60
+signal=1
+
+[volume]
+label=Vol:
+command=amixer -D pulse get Master | awk -F 'Left:|[][]' 'BEGIN {RS=""}{ print $3 }'
+interval=60
+signal=10
