--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 set -g status-right "#(current-layout) "⁞" #(date +'%d-%m-%Y %H:%M')"
 
 # Add truecolor support
-set-option -ga terminal-overrides ",screen-256color:RGB"
+set-option -sa terminal-overrides ",screen-256color:RGB"
 # Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 
