--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -1,6 +1,6 @@
 [now-playing]
 label=Now playing:
-command=now-playing
+command=$SCRIPT_DIR/now-playing
 interval=10
 
 [time]
@@ -15,6 +15,6 @@ signal=1
 
 [volume]
 label=Vol:
-command=amixer -D pulse get Master | awk -F 'Left:|[][]' 'BEGIN {RS=""}{ print $3 }'
+command=$SCRIPT_DIR/volume
 interval=60
 signal=10
