--- a/i3/config
+++ b/i3/config
@@ -4,7 +4,7 @@ set $mod Mod4
 font pango:DejaVu Sans Mono 10
 
 bar {
-  status_command i3blocks
+  status_command SCRIPT_DIR=~/code/dotfiles/status-scripts i3blocks
   position top
   font pango:DejaVu Sans Mono 10
   separator_symbol "⁞"
@@ -22,7 +22,7 @@ exec --no-startup-id nm-applet
 set $refresh_vol && pkill -SIGRTMIN+10 i3blocks
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +10% $refresh_vol
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -10% $refresh_vol
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle $refresh_vol
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
