--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g status-right "#(current-layout) "⁞" #(date +'%d-%m-%Y %H:%M')"
 # Add truecolor support
 set-option -sa terminal-overrides ",screen-256color:RGB"
 # Default terminal is 256 colors
-set -g default-terminal "screen-256color:RGB"
+set -g default-terminal "screen-256color"
 
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
