--- a/i3/config
+++ b/i3/config
@@ -129,27 +129,18 @@ bindsym $mod+Return exec i3-sensible-terminal
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-  # Pressing left will shrink the window’s width.
-  # Pressing right will grow the window’s width.
-  # Pressing up will shrink the window’s height.
-  # Pressing down will grow the window’s height.
   bindsym $left resize shrink width 10 px or 10 ppt
-  bindsym $down resize grow height 10 px or 10 ppt
-  bindsym $up resize shrink height 10 px or 10 ppt
   bindsym $right resize grow width 10 px or 10 ppt
-
-  # same bindings, but for the arrow keys
   bindsym Left resize shrink width 10 px or 10 ppt
-  bindsym Down resize grow height 10 px or 10 ppt
-  bindsym Up resize shrink height 10 px or 10 ppt
   bindsym Right resize grow width 10 px or 10 ppt
-
-  # back to normal: Enter or Escape or $mod+r
-  bindsym Return mode "default"
   bindsym Escape mode "default"
 }
 
 bindsym $mod+r mode "resize"
+
+bindsym $mod+F12 exec --no-startup-id switch-layout && pkill -SIGRTMIN+1 i3blocks
+
+bindsym Print exec flameshot gui
 
 # Shutdown, reboot and lock
 set $Locker i3lock && sleep 1
@@ -167,7 +158,7 @@ mode "$mode_system" {
 }
 bindsym $mod+Home mode "$mode_system"
 
-bindsym $mod+F12 exec --no-startup-id switch-layout && pkill -SIGRTMIN+1 i3blocks
+##### handle windows
 
 # Fix handing of popups
 for_window [window_role="pop-up"] floating enable
@@ -180,7 +171,8 @@ for_window [class="Spotify"] move to workspace $ws3
 assign [class="Slack"] 2
 assign [class="Todoist"] 2
 
-# Statup applications
+##### Startup applications
+
 exec google-chrome
 exec alacritty
 exec todoist
