--- a/tmux.conf
+++ b/tmux.conf
@@ -53,11 +53,13 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
+  seebi/tmux-colors-solarized    \
 "
 
 bind r source-file ~/.tmux.conf #\; display-message "Config reloaded..."
 
 set -g @continuum-restore 'on'
+set -g @colors-solarized '256'
 
 # Initializes TMUX plugin manager
 run-shell ~/.tmux/plugins/tpm/tpm
