--- a/i3/config
+++ b/i3/config
@@ -1,13 +1,14 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 set $mod Mod4
 
-font pango:DejaVu Sans Mono 12
+font pango:Lato Mono 12
 
 bar {
   status_command SCRIPT_DIR=~/code/dotfiles/status-scripts i3blocks
   position top
-  font pango:DejaVu Sans Mono 12
-  separator_symbol "⁞"
+  # font pango:DejaVu Sans Mono 12
+  font pango:Lato Mono 12
+  separator_symbol "·"
 }
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
